<resources>
    <string name="app_name">BlueBucket</string>
    <string name="button_discoverDevices">Discover Devices</string>

    <!-- Navigation Drawer Strings -->
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string-array name="navigation_drawer_array">
        <item>Home</item>
        <item>Settings</item>
        <item>Lights</item>
    </string-array>

    <string-array name="ligts_array">
        <item>Kitchen Top</item>
        <item>Kitchen Bot</item>
        <item>Study Top</item>
        <item>Study Bot</item>
        <item>Bed Bot</item>
        <item>Bed Top</item>
        <item>Bed Top Kop</item>
        <item>Bed Top Lyf</item>
    </string-array>

    <!-- Settings -->
    <string name="textSettings_Time">Time</string>
    <string name="textSettings_TimeDefault">00:00</string>
    <string name="textSettings_Alarm">Alarm</string>

    <string name="textHome_Kitchen_Lights">Kitchen Lights</string>
    <string name="textHome_Study_Lights">Study Lights</string>
    <string name="textHome_Top">Top: </string>
    <string name="textHome_Bot">Bot: </string>


    <string name="textSettings_Get">GET</string>
    <string name="textSettings_Set">SET</string>



    <!--Back button dialog -->
    <string name="alertDialog_Title">Confirm</string>
    <string name="alertDialog_msgKeyActivity">Are you sure you want to close the Bluetooth connection?</string>
    <string name="alertDialog_msgMainActivity">"Close Bluetooth connection?</string>

</resources>
