<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Current Time -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_Time"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_home_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_TimeDefault"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_home_setTime"
                style="@style/Base.Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_Set" />

        </LinearLayout>

        <!-- Current Alarm -->
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_Alarm"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_home_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_TimeDefault"
                android:textAlignment="center"
                android:textSize="25sp" />

            <Button
                android:id="@+id/button_home_setAlarm"
                style="@style/Base.Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textSettings_Set" />

        </LinearLayout>
    </LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textHome_Kitchen_Lights"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <SeekBar
        android:id="@+id/seekBar_kitchenTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:max="255"
        android:paddingBottom="10dp"/>

    <SeekBar
        android:id="@+id/seekBar_kitchenBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:max="255"
        android:paddingBottom="10dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView_home_kitchenTop"
                android:text="@string/textHome_Top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView_home_kitchenBot"
                android:text="@string/textHome_Bot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <include
            android:id="@+id/include_kitchenTop1"
            layout="@layout/custom_include_set_points"/>

        <include
            android:id="@+id/include_kitchenTop2"
            layout="@layout/custom_include_set_points"/>

        <include
            android:id="@+id/include_kitchenTop3"
            layout="@layout/custom_include_set_points"/>

        <include
            android:id="@+id/include_kitchenTop4"
            layout="@layout/custom_include_set_points"/>

        <include
            android:id="@+id/include_kitchenTop5"
            layout="@layout/custom_include_set_points"/>

    </LinearLayout>

</LinearLayout>



</LinearLayout>